--- a/medicos/templates/medicos/consultas_lista.html
+++ b/medicos/templates/medicos/consultas_lista.html
@@ -12,18 +12,18 @@
 {% endblock head %} 
 
 {% block botoes %}
+
 <section class="section_minha_agenda">
+
     {% block profile-title %}
-        <h1 class="titulo">Consultas Futuras</h1>
+        <h1 class="titulo">Consultas</h1> 
     {% endblock profile-title %}
-    
-    {% block accounts_container %}
-    {% endblock accounts_container %}
 
     <div class="container_filter">
         <form method="GET">
+            {% csrf_token %}
             <input type="date" name="data_consulta">
-            <button type="submit">FILTRAR</button>
+            <button type="submit">FITLRAR</button>
         </form>
     </div> 
 
@@ -31,7 +31,7 @@
         {% if user.is_staff or user.is_superuser %}
             {% if consultas %}
                 {% for consulta in consultas %}                 
-                    <div class="consulta-item">
+                    <div class="consulta-item"> 
 
                         <p>Paciente: {{ consulta.cliente }}<br>
                             Prontuário: {{ consulta.cliente.id }}
@@ -45,14 +45,14 @@
 
                         <p>Status: <br> {{consulta.status_cons}}</p>
 
-                        <a href="{% url 'medicos:prontuario' consulta.id %}">
+                        <a href="{% url 'medicos:prontuario_add' consulta.id %}">
                             <img src="{% static 'img/icons/prontuario-medico.png' %}" alt="ícone ilustrativo prontuário">
                         </a>
 
                     </div>
                 {% endfor %}
             {% else %}
-                    <h3>Não há consultas agendadas para essa data.</h3>
+                    <h3>Sem resultados.</h3>
             {% endif %}
         {% endif %}
     </div>
