--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -73,6 +73,13 @@
                     <h2>especialidades</h2>
                 </a>
             </div>
+            
+            <div class="btn_main">
+                <a href="{% url "medicos:convenio_lista" %}">
+                    <img src="{% static 'img/dashboard/icone_convenio.png' %}" alt="ícone perfil paciente">
+                    <h2>convênios</h2>
+                </a>
+            </div>
         {% endif %}
 
         {% comment %} <div class="btn_main">
