--- a/clientes/templates/clientes/cadastro.html
+++ b/clientes/templates/clientes/cadastro.html
@@ -45,6 +45,15 @@
                 </div>
             </fieldset>
         </form>
+        <div class="container margin-top">
+            {% block messages %}
+                {% for message in messages %}
+                    <div class='alert alert-{{ message.tags}}'>
+                    {{ message }}
+                    </div>
+                {% endfor %}
+            {% endblock messages %}
+        </div>
         <script type="text/javascript">
         $(document).ready(function() {
             $("#id_especialidade").change(function() {
