--- a/static/css/formulario/form.css
+++ b/static/css/formulario/form.css
@@ -1,15 +1,7 @@
-section {
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-}
-
 .perfil-cadastro {
-    margin-top: 8%;
     width: 40%;
-    height: 195px;
     background-color: var(--azul-claro);
-    border-radius: 0 90px 90px 0;
+    border-radius: 0 0 90px 0;
 
     display: flex;
     flex-direction: row-reverse;
@@ -29,55 +21,59 @@ section {
 #container-forms {
     max-width: 100%;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--bg);
 }
 
 .form-grid {
-    max-width: 60%;
+    max-width: 80%;
     margin-top: 5rem;
-    display: flex;
-    flex-flow: row wrap;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas:
+        "input input"
+        "input input"
+        "input input"
+        "input input"
+        "input input"
+        "input input"
+        "input input"
+        "input input"
+        "button button";
+    gap: 10px;
 }
-    
+
 .form-field {
-    margin: 5px;
-    display: flex;
-    flex-direction: column;
-    flex: 1 0 auto;
+    margin-bottom: 10px;
 }
 
 .form-label {
-    margin-bottom: -15px;
     font-family: var(--texto);
-    text-transform: uppercase;
     /* font-weight: bold; */
     /* padding: 0 0 0 1.2rem; */
     font-weight: normal;
 }
 
 .form-button {
-    flex-basis: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.form-button button {
     background-color: var(--verde);
     border-radius: 20px;
     border: none;
     color: var(--branco);
     font-family: var(--titulo);
+    font-size: 20px;
     font-weight: 600;
     height: 40px;
-    width: 500px;
-    margin: 2rem;
+    width: 140px;
+    margin: 1rem;
+
+    grid-area: button;
 }
 
 .input-estilizado {
     height: 40px;
     border-radius: 10px;
     border: none;
-    padding-left: 1rem;
     background-color: var(--azul-claro);
 }
 
@@ -99,5 +95,3 @@ section {
     border: none;
     background-color: var(--azul-claro-light);
 }
-
-
