feature: Adicionei função para criar médico. feature: Adicionei botão para deletar especialidade

--- a/medicos/templates/medicos/admin/especialidade_lista.html
+++ b/medicos/templates/medicos/admin/especialidade_lista.html
@@ -36,6 +36,11 @@
             <td>
                 {{ especialidade.nome }}
             </td>
+            <td>
+                <a href="{% url 'medicos:especialidade_deletar' especialidade.id %}" class="mr-1 text-danger" style="padding-left: 10px; text-decoration: none;">
+                    <i class="fas fa-trash-alt"></i>
+                </a>
+            </td>
         </tr>
         {% endfor %}
     </tbody>
