--- a/medicos/templates/medicos/admin/agenda_cadastro.html
+++ b/medicos/templates/medicos/admin/agenda_cadastro.html
@@ -1,4 +1,10 @@
-{% extends "base.html" %}
+{% extends "base_dash.html" %}
+{% load static %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static "css/formulario/form.css" %}">
+    <link rel="stylesheet" href="{% static "css/dashboard/base_dash.css" %}">
+{% endblock head %}
 
 {% load widget_tweaks %}
 
