--- a/medicos/templates/medicos/admin/agenda_lista.html
+++ b/medicos/templates/medicos/admin/agenda_lista.html
@@ -1,11 +1,21 @@
-{% extends "accounts/index.html" %}
+{% extends "base_dash.html" %}
+{% load static %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static "css/formulario/list.css" %}">
+    <link rel="stylesheet" href="{% static "css/dashboard/base_dash.css" %}">
+{% endblock head %}
 
 {% block title %}
-    Minhas Consultas
+    Agendas | {{ block.super }}
 {% endblock %}
 
 {% block accounts_container %}
-<h2>Minhas Consultas</h2>
+<div class="content">
+    <div>
+        <h2 class="titulo__padrao">Agendas Disponíveis</h2>
+        <a href="{% url "medicos:agendar_consulta" %}">+ NOVO AGENDAMENTO</a>
+    </div>
 <table class="table table-bordered">
     <thead>
         <tr>
@@ -33,13 +43,13 @@
                 <a href=""># {{ consulta.pk }}</a>
             </td>
             <td>
-                {{ consulta.agenda.medico }}
+                {{ consulta.medico }}
             </td>
             <td>
-                {{ consulta.agenda.dia|date:"d/m/Y" }}
+                {{ consulta.dia|date:"d/m/Y" }}
             </td>
             <td>
-                {{ consulta.agenda.get_horario_display }}
+                {{ consulta.get_horario_display }}
             </td>
             <td>
                 <a href="{% url 'medicos:agendar_consulta_atualizar' consulta.id %}" class="text-primary" style="padding-left: 10px; text-decoration: none;">
@@ -53,4 +63,5 @@
         {% endfor %}
     </tbody>
 </table>
+</div>
 {% endblock %}
