--- a/static/css/formulario/form.css
+++ b/static/css/formulario/form.css
@@ -15,7 +15,7 @@
 }
 
 .perfil-cadastro h1 {
-    font-size: 30px;
+    font-size: 20px;
 }
 
 #container-forms {
@@ -51,7 +51,8 @@
 .form-label {
     font-family: var(--texto);
     /* font-weight: bold; */
-    padding: 0 0 0 1.2rem;
+    /* padding: 0 0 0 1.2rem; */
+    font-weight: normal;
 }
 
 .form-button {
@@ -76,10 +77,13 @@
     background-color: var(--azul-claro);
 }
 
-/* estilo dos inputs na tela de cadastro */
-.form-group {
-    padding: .5rem;
+.form-dash {
+    margin-left: 6rem;
 }
+
+/* estilo dos inputs na tela de cadastro */
+/* .form-group {
+    /* padding: .5rem; */
 
 /* imputis de email e senha na tela de Login */
 .form-control {
