--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
 	<meta charset="utf-8">
 	<title>{% block title %} Clinica Vision {% endblock %}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />  <!-- Outros elementos do head, como meta tags, título, etc. -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<link rel="stylesheet" href="{% static 'assets/bootstrap.min.css' %}"media="screen" />
 	<link rel="stylesheet" href="{% static 'assets/custom.min.css' %}" media="screen" />
 	<link rel="stylesheet" href="{% static 'assets/extra.css' %}" media="screen" />
@@ -14,75 +15,81 @@
   {% block head %}{% endblock head %}
 </head>
 <body>
+  {% block header %}
     <div class="nav navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a href="{% url 'index'%}" class="navbar-brand"><img src="{% static "img/logo/logo-vision-dark.svg" %}" class="logo" alt=""></a>
+          <a href="{% url 'home'%}" class="navbar-brand"><img src="{% static "img/logo/logo-vision-dark.svg" %}" class="logo" alt=""></a>
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
         </div>
-        <div class="navbar-collapse collapse" id="navbar-main">
+        <nav class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
+            {% block nav_header %}
             <li>
-              <a href="{% url 'clientes:consulta_create'%}">Agendamento</a>
+              <a href="#about">Sobre nós</a>
             </li>
-            {% if user.is_staff or user.is_superuser %}
+            <li>
+              <a href="#specialties">Especialidades</a>
+            </li>
+            <li>
+              <a href="#history">Nossa história</a>
+            </li>
+            <li>
+              <a href="#contact">Contato</a>
+            </li>
+            {% endblock nav_header %}
+            {% comment %} {% if user.is_staff or user.is_superuser %}
             <li>
               <a href="{% url 'medicos:agendar_consulta'%}">Agendas</a>
             </li>
-            <li>
-              <a href="{% url 'medicos:medico_cadastro'%}">Medicos</a>
-            </li>
-            <li>
-              <a href="{% url 'medicos:especialidade_cadastro'%}">Especialidade</a>
-            </li>
-            {% endif %}
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
+            {% endif %} {% endcomment %}
             {% if user.is_authenticated %}
-              <li><a href="{% url 'accounts:index' %}">Minha Conta</a></li>
-              <li><a href="{% url 'accounts:logout' %}">Sair</a></li>
+              <li><a href="{% url 'accounts:redirect_user' %}" class="custom_btn_logout">Minha Conta</a></li>
+              <li><a href="#" id="button-back" onclick="history.back()" class="custom_btn_logout">Voltar</a></li>
+              <form method="post" action="{% url 'accounts:logout' %}" class="navbar-form">
+              {% csrf_token %}                 
+              <li><button type="submit" class="custom_btn_logout">Sair</button></li>
+              </form>
             {% else %}
-              <li><a href="{% url 'accounts:login' %}">Login</a></li>
+            <li><a href="{% url 'accounts:login' %}">Login</a></li>
             {% endif %}
           </ul>
-        </div>
+        </nav>
       </div>
     </div>
+  {% endblock header %}
 
-    {% block content %}{% endblock content %}
 		{% block container %}{% endblock container %}
+    {% block content %}{% endblock content %}
 
-    <div class="container margin-top">
+    {% comment %} <div class="container margin-top">
       {% block messages %}
         {% for message in messages %}
           <div class='alert alert-{{ message.tags}}'>
           {{ message }}
           </div>
         {% endfor %}
-      {% endblock messages %} 
+      {% endblock messages %}  {% endcomment %}
     
-    {% comment %} <div class="row">
-      <div class="col-lg-12">
-        <ul class="list-unstyled">
-          <li class="pull-right"><a href="#top">Voltar ao Topo</a></li>
-        </ul>
-      </div>
-    </div> {% endcomment %}
+      {% comment %} Botão para voltar ao topo {% endcomment %}
+    <div class="arrow-up hidden" id="arrow-up">
+      <a href="#top"><img src="{% static "img/icons/arrow-up.png" %}" alt=""></a>
+    </div>
   </div>
 </div>
 
 {% block footer %}
     <!-- Aqui começa o rodapé -->
-    <footer class="titulo">
+    <footer>
         <div>
             <section>
                 <p>
-                    Rua da Saúde, 333 - Saúde<br />
-                    São Paulo - SP, CEP: 00000-000
+                  R. do Oratório, 215 - Mooca<br />
+                  São Paulo - SP, 03117-000
                 </p>
             </section>
             <section>
@@ -123,6 +130,8 @@
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="https://kit.fontawesome.com/c2a3297ec9.js" crossorigin="anonymous"></script>
   <script src="{% static 'assets/bootstrap.min.js'%}"></script>
-{% block scripts %}{% endblock %}
+  <script src="{% static 'js/back-page.js'%}"></script> {% comment %} Script para voltar para página anterior {% endcomment %}
+  <script src="{% static "js/scroll-page.js" %}"></script> {% comment %} Script de rolagem da home page {% endcomment %}
+{% block scripts %}{% endblock scripts %}
 </body>
 </html>
