--- a/templates/form_delete.html
+++ b/templates/form_delete.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{% extends "base_dash.html" %}
+{% load static %}
 
 {% load widget_tweaks %}
 
@@ -13,7 +14,8 @@
             <h1>Apagar</h1>
         </div>
         <form action="" method="POST">
-            <p>Deseja realmente excluir: <strong>{{ object }}</strong>?</p>
+            <p>Deseja realmente excluir: <br>
+            <strong>{{ object }}</strong>?</p>
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="btn btn-danger">Excluir</button>
