fix: Ajuste nos botões do dashboard.

--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -34,7 +34,7 @@
         {% block add_botoes %}{% endblock add_botoes %}
         
         {% block admin_botoes %}
-        {% if request.user.is_staff or request.user.is_superuser %}
+        {% if request.user.is_superuser %}
 
             <div class="btn_main">
                 <a href="{% url 'medicos:agenda_lista'%}">
