fix: adicionei mais um input para filtro do cliente_id

--- a/medicos/templates/medicos/prontuarios_lista.html
+++ b/medicos/templates/medicos/prontuarios_lista.html
@@ -24,6 +24,7 @@
         <form method="GET">
             {% csrf_token %}
             <input type="date" name="data_consulta">
+            <input type="number" name="cliente_id" placeholder="Nº prontuário">
             <button type="submit">FITLRAR</button>
         </form>
     </div>  
